syntax = "proto3";
package training;

message IterationInfo {
  int32 total_iteration = 1;
  int32 curr_iteration = 2;
}

message EpochInfo {
  int32 total_epoch = 1;
  int32 curr_epoch = 2;
}

message MetricInfo {
  string metric = 1;
  float value = 2;
}

message TrainingRequest {
  string model_name = 1;
}

message TrainingResponse {
  repeated MetricInfo metric_info_list = 1;
  IterationInfo iteration_info = 2;
  EpochInfo epoch_info = 3;
}

service TrainingService {
  rpc StartTraining (TrainingRequest) returns (stream TrainingResponse);
  rpc RunMNIST (TrainingRequest) returns (stream TrainingResponse);
}
